# controlling-test-1

./: .env.example  .gitignore  Clarity_Installer.command  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml.example
app/: app.py
sample_data/: buchungen_Q2_2024_fiktiv.csv  buchungen_Q2_2025_fiktiv.csv  current_quarter.csv  prior_year_same_quarter.csv
scripts/: generate_sample_data.py
tests/: test_io.py  test_keywords.py  test_normalize.py  test_ollama.py  test_ollama_client.py  test_variance.py
variance_copilot/: __init__.py  excel_report.py  io.py  keywords.py  llm.py  normalize.py  ollama_client.py  openai_client.py  pdf_report.py  prompts.py  variance.py
